--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2 id="1"> The Day I Made My First Website</h2>
         <h6>Posted on April / 4 / 2020</h6>
         
-        <p> It was April 2nd. I was learning HTML/CSS on Khan Academy along with my sister. I had come to Project- Travel webpage. I immediately decided that I would make a webpage about travelling to Taj Mahal. I typed code for two hours! At last it was ready! I read it and looked through it. It was perfect. I was so happy. I shared it to my dad, mom, uncle, brother, sister and everyone else on hangouts. Click on this link to view my website-<a href="https://www.khanacademy.org/computer-programming/travel-to-taj-mahal/6528083923255296"> My website</a></p>
+        <p> It was April 2nd. I was learning HTML/CSS on Khan Academy along with my sister. I had come to Project- Travel webpage. I immediately decided that I would make a webpage about travelling to Taj Mahal. I typed code for two hours! At last it was ready! I read it and looked through it. It was perfect. I was so happy. I shared it to my dad, mom, uncle, brother, sister and everyone else on hangouts. Click on this link to view my website-<a href="https://madhavjaigarg.github.io/madhavjaigargtravel.github.io/"> My website</a></p>
         
         <h2 id="2"> The First Wordsearch Made By Me  </h2>
         <h6>Posted on April / 5 / 2020</h6>
